--- a/index.ipynb
+++ b/index.ipynb
@@ -295,7 +295,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    open_restaurant.append()"
+    "    for resta"
    ]
   },
   {
