Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -295,7 +295,8 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    for resta"
+    "    for restaurant in restaurants:\n",
+    "        if restaurant['is_closed'] "
    ]
   },
   {
