--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,7 @@
     "def open_restaurants(restaurants):\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed']:\n",
-    "            open_restaurant"
+    "            open_restaurants.append(restaurant['name'])"
    ]
   },
   {
