Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,8 @@
     "def open_restaurants(restaurants):\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed']:\n",
-    "            open_restaurants.append(restaurant['name'])"
+    "            open_restaurants.append(restaurant['name'])\n",
+    "return open_restaurants"
    ]
   },
   {
