Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -295,6 +295,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
+    "    open_restaura\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed']:\n",
     "            open_restaurants.append(restaurant['name'])\n",
