--- a/index.ipynb
+++ b/index.ipynb
@@ -290,16 +290,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    open_restaura\n",
+    "    open_restaurants = []\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed']:\n",
     "            open_restaurants.append(restaurant['name'])\n",
-    "return open_restaurants"
+    "    return open_restaurants"
    ]
   },
   {
