--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,7 @@
     "def open_restaurants(restaurants):\n",
     "    open_restaurants = []\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant['is_closed'] == True:\n",
+    "        if restaurant['is_closed']:\n",
     "            open_restaurants.append(restaurant['name'])\n",
     "    return open_restaurants"
    ]
