--- a/index.ipynb
+++ b/index.ipynb
@@ -290,21 +290,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
     "    open_restaurants = []\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant['is_closed']:\n",
+    "        if not restaurant['is_closed']:\n",
     "            open_restaurants.append(restaurant['name'])\n",
     "    return open_restaurants"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
        "1"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,16 +324,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Frontier Restaurant'"
+       "'Fork & Fig'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
